--- a/thesis/04-nmt-ctc.tex
+++ b/thesis/04-nmt-ctc.tex
@@ -360,9 +360,7 @@ computational cost.
 
 \begin{figure}
   \centering
-  \resizebox{10cm}{7cm}{%
-    \input{img/decoding_speed.tex}
-  }
+  \input{img/end-to-end-decoding-speed/speed.tex}
 
   \caption{Decoding speed \JH{todo: caption, rerender the image with better
       colors and scale}.}%
