--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -844,21 +844,6 @@ author={
   year =	 2003
 }
 
-@inproceedings{kudo2018sentencepiece,
-  title =	 "{S}entence{P}iece: A simple and language independent subword
-                  tokenizer and detokenizer for Neural Text Processing",
-  author =	 "Kudo, Taku and Richardson, John",
-  booktitle =	 "Proceedings of the 2018 Conference on Empirical Methods in
-                  Natural Language Processing: System Demonstrations",
-  month =	 nov,
-  year =	 2018,
-  address =	 "Brussels, Belgium",
-  publisher =	 "Association for Computational Linguistics",
-  url =		 "https://www.aclweb.org/anthology/D18-2012",
-  doi =		 "10.18653/v1/D18-2012",
-  pages =	 "66--71"
-}
-
 @article{ba2016layer,
   author =	 {Ba, Lei Jimmy and Kiros, Ryan and Hinton, Geoffrey E},
   title =	 {Layer Normalization},
@@ -1215,6 +1200,18 @@ author={
   pages =	 {6000--6010},
   publisher =	 {Curran Associates, Inc.},
   year =	 2017
+}
+
+@inproceedings{schuster-nakajima-2012-japanese,
+  author={Schuster, Mike and Nakajima, Kaisuke},
+  booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal
+                  Processing (ICASSP)},
+  title={Japanese and Korean voice search},
+  year={2012},
+  volume={},
+  number={},
+  pages={5149-5152},
+  doi={10.1109/ICASSP.2012.6289079}
 }
 
 
