--- a/thesis/gnuplot-lua-tikz.sty
+++ b/thesis/gnuplot-lua-tikz.sty
@@ -3,7 +3,7 @@
 %%
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{gnuplot-lua-tikz}%
-          [2016/07/23 (rev. 102) GNUPLOT Lua terminal style]
+          [2019/06/10 03:12:00 (rev. 108) GNUPLOT Lua terminal style]
 
 \RequirePackage{tikz}
 
